--- a/my-datagrid-app/src/App.css
+++ b/my-datagrid-app/src/App.css
@@ -98,6 +98,7 @@
 .MuiButton-outlined {
   border-color: #666;
   color: #666;
+  background-color: yellow; /* Cambiato il colore di sfondo del pulsante "Filtra" a giallo */
 }
 
 /* Aggiungi questo stile per i blocchetti dei filtri */
